<resources>
    <string name="app_name">约伞</string>
    <string name="gongxiangyusan">约伞</string>
    <string name="saoyisao">扫一扫</string>
    <string name="jiesao">借伞</string>
    <string name="haisan">还伞</string>
    <string name="jiesanshij">借伞时间:</string>
    <string name="haisanshijian">还伞时间</string>
    <string name="text_keep_password">记住密码</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="shiyongshuom">使用说明</string>
    <string name="qingwuguanbi">正在借伞请勿关闭···</string>
    <string name="gerenzhongxin">个人中心</string>
    <string name="shoujihaoma">17620193389</string>
    <string name="shoujihaoma2">广州_啊东</string>
    <string name="wodeqianbao">我的钱包</string>
    <string name="jiner">0元</string>
    <string name="wodejilu">我的行程</string>
    <string name="yaoqinghaoyou">邀请好友</string>
    <string name="yonghuzhinan">用户指南</string>
    <string name="tv_settings">设置</string>
    <string name="changyongdizhi">常用地址</string>
    <string name="jianchaxinbanben">检查新版本</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="yonghuxieyi">用户协议</string>
    <string name="yajinshuoming">押金说明</string>
    <string name="chongzhixieyi">充值协议</string>
    <string name="shangchuanweizi">上传位置</string>
    <string name="touxiang">头像</string>
    <string name="nicheng">昵称</string>
    <string name="xingming">姓名</string>
    <string name="shimingrenzheng">实名认证</string>
    <string name="shoujihaomaa">手机号码</string>
    <string name="weixin">微信</string>
    <string name="QQ">QQ</string>
    <string name="xiaoyuanrenzheng">校园认证</string>
    <string name="weirenzheng">去认证？</string>
    <string name="imge_weibangding">未绑定</string>
    <string name="gerenxinxin">个人信息</string>
    <string name="lishijilu">使用记录</string>
    <string name="base_color">空降共享雨伞</string>
    <string name="shoujidenglu">手机登录</string>
    <string name="tv_phone">手机号码:</string>
    <string name="qingshurushoujihaoma">                 请输入手机号码</string>
    <string name="yanzhengma">验证码:</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="shiyongdisanfangdenglu">使用社交账号一件登录</string>
    <string name="yonghuming">用户名:</string>
    <string name="weixinzhifu">微信支付</string>
    <string name="zhifubao">支付宝</string>
    <string name="yuer">余额支付</string>
    <string name="wodeqianbaos">我的钱包</string>
    <string name="jubao">举报</string>
    <string name="mingxi">明细</string>
    <string name="ling">0</string>
    <string name="chefeiyuyer">使用余额（元）</string>
    <string name="yanjin">押金0元</string>
    <string name="chongzjijin">充值金</string>
    <string name="chongzhiYuEr">充值余额</string>
    <string name="chongzhiyajin">充值押金</string>
    <string name="tishi">提示!</string>
    <string name="wenzitishi">借雨伞必须支付20元押金，押金可退还!</string>
    <string name="chongyajing">充押金</string>
    <string name="quchongzhi">去充值</string>
    <string name="yajinchongzhi">押金充值</string>
    <string name="jinerwenzi">金额文字</string>
    <string name="yuan">20元</string>
    <string name="tuiyajin">押金随心退，安全速到账</string>
    <string name="chongyajin">充押金</string>
    <string name="shuoming">共享雨伞不会以任何形式要求您输入银行账号和密码!</string>
    <string name="xuyaobangzhu">需要帮助？</string>
    <string name="qishishijian">起始时间</string>
    <string name="yushanbianhao">雨伞编号:</string>
    <string name="bianhao">01010101</string>
    <string name="shijian">8 分钟</string>
    <string name="jieshanhuafei">使用花费:</string>
    <string name="yaoqinghaoyous">邀请好友</string>
    <string name="wenzi">快来邀请好友一起借伞吧！</string>
    <string name="yaoqingwenzi">好友用您的邀请码成功注册，您的信用值会增加哦！</string>
    <string name="nindeyaoqingma">您的邀请码为:</string>
    <string name="yaoqingma">刘军123456789</string>
    <string name="xiugai">修改</string>
    <string name="fenxiangdao">分享到</string>
    <string name="weixinhaoyou">微信好友</string>
    <string name="weixinpyquan">微信朋友圈</string>
    <string name="jinermingxi">明细</string>
    <string name="tuikuanshuoming">退款说明</string>
    <string name="fukuanchengg">付款成功</string>
    <string name="fukuanshijian">2017-06-09 08:49</string>
    <string name="qianbaochongzhi">充值</string>
    <string name="chongzhijiner">请选择金额</string>
    <string name="yibaiyuan">100元</string>
    <string name="wushiyuan">50元</string>
    <string name="ershiyuan">20元</string>
    <string name="shiyuan">10元</string>
    <string name="chongzhiwenzi">点击去充值,既表示已经阅读并同意《充值协议》共享雨伞不会任何形式要求您输入银行账号和密码</string>
    <string name="quchongzhis">立刻充值</string>
    <string name="yajintuikuai">押金退款</string>
    <string name="fenxiang">分享朋友</string>
    <string name="network_err">加载失败</string>
    <string name="huanyingye">欢迎页面</string>
    <string name="banquanxinxi">版权信息</string>
    <string name="xingyikeji">广州星弈电子科技有限公司</string>
    <string name="guanyuwomenwenzi">广州星弈电子科技有限公司成立于2014年7月，总部设在广州。公司定位为智能物联网技术方案提供商，致力于以科技创新改善人们的生活，以提供优质增值服务给客户为核心理念。星弈科技拥有强大的技术团队和研发实力，研发团队人员占全公司人数的80%1$s以上，其中本科学历以上人员占90%2$ss，取得了多项国家授权专利。经过多年的技术积累，公司已经形成以智能硬件及移动物联网系统为核心的技术平台，并在此基础上开发出一系列畅销的产品。
</string>
    <string name="jinerhanzi">金额</string>
    <string name="meiweibuzhipsha">美味不只披萨</string>
    <string name="xiangqing">2017年6月10日-20日欢乐因分享而加倍，超值套餐等你来！</string>
    <string name="bishengkezhengzaiweininkaishan">必胜客正在为您开伞</string>
    <string name="baifenzhi">50%</string>
    <string name="dakaixiangce">打开相册</string>
    <string name="dakaixiangji">打开相机</string>
    <string name="quxiao">取消</string>
    <string name="kehufuwu">客户服务</string>
    <string name="kaibuqisuo">开不起锁</string>
    <string name="faxianyushanguzhang">发现雨伞故障</string>
    <string name="jubaoweixiu">举报违乱扔</string>
    <string name="qitawent">其他问题</string>
    <string name="saomiaoerweima">扫描二维码获取编码</string>
    <string name="qingshuruxinxi">把您所有的问题都可以写入到上面输入框，我们会尽快处理！</string>
    <string name="tijiao">提交</string>
    <string name="zhuceyudenglu">注册与登录</string>
    <string name="yushanfeiyuyajin">雨伞费与押金</string>
    <string name="wodeyushanyuxinwent">我的雨伞信用问题</string>
    <string name="haishanxiangguan">还伞相关</string>
    <string name="kehufujinduchaxuan">客户服务进度查询</string>
    <string name="ruanjiangengxintishi">软件更新提示</string>
    <string name="gongxiangyushanzhenghan">共享雨伞震撼上线！</string>
    <string name="gongxiangyushangengxinneirong">共享雨伞更新内容！</string>
    <string name="gongxiangyus">共享雨伞为您扫描</string>
    <string name="message_calendar_succeed">获取日历权限成功</string>
    <string name="message_post_succeed">获取短信sd卡权限成功</string>
    <string name="xiangjiqyuanxian">获取相机权限成功</string>
    <string name="message_calendar_failed">获取日历权限失败</string>
    <string name="message_post_failed">获取短信、SD卡权限失败</string>
    <string name="kongbai"></string>
    <string name="lianxikehu">联系客服</string>
    <string name="gongsidianhua">公司电话：</string>
    <string name="dianhua">020-29832531</string>
    <string name="gongsyouxiang">公司邮箱：</string>
    <string name="youxiang">service@yuesam.com</string>
    <string name="gongsidizhi">公司地址：</string>
    <string name="dizhi">广州市天河区，中山大道中路1192号，盈丰商务大厦，A栋515</string>
    <string name="jilu">记录</string>
    <string name="baocun">保存</string>
    <string name="shuzis">0.00</string>
    <string name="tuihuiyajin">退回押金</string>
    <string name="keyong">可用押金（元）</string>
    <string name="shangjiazil">商家资料</string>
    <string name="leduhui">乐都汇</string>
    <string name="shanghumingcheng">商户名称</string>
    <string name="shanghudizhi">商户地址</string>
    <string name="xiangxidizhi">广东广州市天河区中山大道11116号</string>
    <string name="nindeyingyezhizhao">您的营业执照</string>
    <string name="guanliyuan">管理员</string>
    <string name="sanzuoid">伞座 id:</string>
    <string name="sanhao">3515315312312313</string>
    <string name="diliweizhi">地理位置：</string>
    <string name="xuanzeshanghu">选择商户：</string>
    <string name="dianwo">点我选择地理位置</string>
    <string name="dianwoxuanzshanghuming">点我选择商户名称</string>
</resources>