<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/zhujiemlanse_x"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/image_back"
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_back"
            android:layout_width="35dp"
            android:layout_height="match_parent" />
        <TextView
            android:textColor="@color/white"
            android:textSize="19sp"
            android:gravity="center"
            android:text="@string/guanliyuan"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_mingxi"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/baocun"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_width="35dp"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:text="@string/sanzuoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_sanzuoid"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:text="@string/sanhao"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:text="@string/diliweizhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_dianwo"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@string/dianwo"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:text="@string/xuanzeshanghu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_shoppingSeclect"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/dianwoxuanzshanghuming"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>