<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ll_layout_sss"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@drawable/dingbujianbian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:id="@+id/ll_xxxx"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/image_back"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textColor="@color/white"
                android:textSize="19sp"
                android:gravity="center"
                android:text="@string/lianxikehu"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:visibility="gone"
                android:id="@+id/tv_mingxi"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/mingxi"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/ll_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <LinearLayout
           android:layout_marginLeft="15dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:textSize="18sp"
               android:text="@string/gongsidianhua"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:layout_marginLeft="10dp"
               android:textSize="18sp"
               android:text="@string/dianhua"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </LinearLayout>

       <LinearLayout
           android:layout_marginTop="47dp"
           android:layout_marginLeft="15dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:textSize="18sp"
               android:text="@string/gongsyouxiang"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:layout_marginLeft="10dp"
               android:textSize="18sp"
               android:text="@string/youxiang"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </LinearLayout>

       <LinearLayout
           android:layout_marginTop="47dp"
           android:layout_marginLeft="15dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:textSize="18sp"
               android:text="@string/gongsidizhi"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <TextView
               android:layout_marginLeft="10dp"
               android:textSize="18sp"
               android:text="@string/dizhi"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </LinearLayout>

    </LinearLayout>
</LinearLayout>