<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/fl_layout"
    android:background="@color/white"
    android:layout_height="match_parent">
    <ImageView
        android:background="@drawable/wodeqianbao_x"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/image_back"
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:textColor="@color/white"
            android:textSize="19sp"
            android:gravity="center"
            android:text="@string/wodeqianbaos"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_mingxi"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/mingxi"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_layout_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:id="@+id/tv_yuer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ling"
                android:textSize="30sp" />

            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chefeiyuyer"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lay_layoutshabi"
            android:orientation="horizontal"
            android:layout_marginBottom="85dp"
            android:layout_above="@+id/ll_layout"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <Button
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/btn_Recharge"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/chongzhiYuEr"
                android:background="@drawable/jianbian_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/btn_chongzhiYaJin"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/chongzhiyajin"
                android:background="@drawable/jianbian_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="35dp"
            android:id="@+id/llayout"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_yajin"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/yanjin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_tuikuan"
                android:textSize="20sp"
                android:textColor="@color/lanse"
                android:layout_marginLeft="15dp"
                android:text="@string/yajintuikuai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>