<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/click_to_dismiss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/toumingse"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/popup_anima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:background="@drawable/button_yuanjiao_baise"
            >
            <TextView

                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:textColor="@color/zhutiyanse"
                android:textSize="20sp"
                android:id="@+id/tx_1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tishi"/>

            <TextView
                android:textColor="@color/qianheise"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:id="@+id/tx_2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/wenzitishi"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TextView
                android:textColor="@color/top_red"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:id="@+id/tx_3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/chongyajing"/>
            <TextView
                android:textColor="@color/top_red"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:id="@+id/tx_4"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:text="@string/quchongzhi"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>